# shut-up-warren

./: Cargo.toml  Dockerfile  tailwind.config.js
src/: main.rs
src/pages/: index.html  meme.html
src/structs/: mod.rs
src/styles/: source.css  styles.css
